welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: not found: value T
for( i<-0 to T.length-1){avance(); getCouleurSol()}
             ^